--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/utilities.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Get Linked</title>
   </head>
   <body>
@@ -41,7 +48,7 @@
             Participate in getlinked hackathon 2023 and stand a chance to win a
             big prize
           </p>
-          <button>Register</button>
+          <button class="grow">Register</button>
           <div class="hero-img-flare">
             <img src="/assets/vectors/Purple-Lens-Flare-PNG.png" alt="" />
           </div>
@@ -69,6 +76,8 @@
           </div>
         </div>
       </div>
+
+      <hr class="hero-hr" />
 
       <!-- INTRODUCTION -->
       <div class="intro">
@@ -104,6 +113,7 @@
           <img src="./assets/stars/purple_star2.png" alt="a cute purple star" />
         </div>
       </div>
+      <hr />
 
       <!-- RULES AND GUIDELINES -->
       <div class="rules">
@@ -146,30 +156,178 @@
             alt="lens flare"
           />
         </div>
-        <!-- <hr> -->
       </div>
+      <hr />
 
       <!-- JUDGING CRITERIA -->
       <div class="criteria">
-        <div class="crit-left"></div>
-
-        <div class="crit-right">
+        <div class="crit-left">
           <img
+            class="crit-img"
             src="./assets/images/citeria.png"
             alt="an illustration of a man and woman holding pie charts"
           />
 
-          <img src="./assets/stars/purple_star2.png" alt="purple star" />
-          <img src="./assets/stars/star_grey.png" alt="grey star" />
-          <img src="./assets/stars/star_white.png" alt="white star" />
+          <img
+            class="crit-purple"
+            src="./assets/stars/purple_star2.png"
+            alt="purple star"
+          />
+          <img
+            class="crit-grey"
+            src="./assets/stars/star_grey.png"
+            alt="grey star"
+          />
+          <img
+            class="crit-white"
+            src="./assets/stars/star_white.png"
+            alt="white star"
+          />
+          <img
+            class="crit-lens-1"
+            src="./assets/vectors/Purple-Lens-Flare-PNG.png"
+            alt="lens flare"
+          />
+        </div>
+
+        <div class="crit-right">
+          <h2>Judging Criteria <span>Key attributes</span></h2>
+          <p>
+            <span> Innovation and Creativity: </span>
+            Evaluate the uniqueness and creativity of the solution. Consider
+            whether it addresses a real-world problem in a novel way or
+            introduces innovative features.
+          </p>
+
+          <p>
+            <span>Functionality:</span>
+            Assess how well the solution works. Does it perform its intended
+            functions effectively and without major issues? Judges would
+            consider the completeness and robustness of the solution.
+          </p>
+
+          <p>
+            <span>Impact and Relevance:</span>
+            Determine the potential impact of the solution in the real world.
+            Does it address a significant problem, and is it relevant to the
+            target audience? Judges would assess the potential social, economic,
+            or environmental benefits.
+          </p>
+
+          <p>
+            <span>Technical Complexity:</span>
+            Evaluate the technical sophistication of the solution. Judges would
+            consider the complexity of the code, the use of advanced
+            technologies or algorithms, and the scalability of the solution.
+          </p>
+
+          <p>
+            <span>Adherence to Hackathon Rules:</span>
+            Judges will Ensure that the team adhered to the rules and guidelines
+            of the hackathon, including deadlines, use of specific technologies
+            or APIs, and any other competition-specific requirements.
+          </p>
+
+          <button class="grow">Read More</button>
+          <img
+            class="crit-lens-2"
+            src="./assets/vectors/Purple-Lens-Flare-PNG.png"
+            alt="lens flare"
+          />
         </div>
       </div>
 
+      <hr />
+
       <!-- FREQUENTLY ASKED QUESTIONS -->
-      <div class="faq"></div>
+      <div class="faq">
+        <div class="faq-left">
+          <img src="./assets/stars/purple_star2.png" alt="a purple star" />
+          <h2>Frequently Asked <span>Questions</span></h2>
+          <p>
+            We've got answers to the questions that you might want to ask about
+            <span> getlinked Hackathon 1.0</span>
+          </p>
+
+          <div class="faq-questions">
+            <div class="quest">
+              <p>Can I work on a project I started before the hackathon?</p>
+              <i class="fa fa-plus grow" aria-hidden="true"></i>
+            </div>
+
+            <div class="quest">
+              <p>What happens if I need help during the hackathon?</p>
+              <i class="fa fa-plus grow" aria-hidden="true"></i>
+            </div>
+
+            <div class="quest">
+              <p>What happens if I don't have an idea for a project?</p>
+              <i class="fa fa-plus grow" aria-hidden="true"></i>
+            </div>
+
+            <div class="quest">
+              <p>Can I join a team or do I have to come with one?</p>
+              <i class="fa fa-plus grow" aria-hidden="true"></i>
+            </div>
+
+            <div class="quest">
+              <p>What happens after the hackathon ends</p>
+              <i class="fa fa-plus grow" aria-hidden="true"></i>
+            </div>
+
+            <div class="quest">
+              <p>Can I work on a project I started before the hackathon?</p>
+              <i class="fa fa-plus grow" aria-hidden="true"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="faq-right">
+          <div class="question-set">
+            <img src="./assets/vectors/question.png" alt="question mmarks" />
+            <img src="./assets/vectors/question.png" alt="question mmarks" />
+            <img src="./assets/vectors/question.png" alt="question mmarks" />
+          </div>
+
+          <img
+            id="faq-img"
+            src="./assets/images/cwok.png"
+            alt="a man thinking on a cloud"
+          />
+          <img
+            src="./assets/stars/gradient_star.png"
+            alt="a purple star"
+            class="faq-gradient-star1"
+          />
+          <img
+            src="./assets/stars/gradient_star.png"
+            alt="a purple star"
+            class="faq-gradient-star2"
+          />
+          <img
+            src="./assets/stars/star_grey.png"
+            alt="a grey star"
+            class="faq-grey-star"
+          />
+          <img
+            src="./assets/stars/star_white.png"
+            alt="a white star"
+            class="faq-white-star"
+          />
+        </div>
+      </div>
+
+      <hr />
 
       <!-- TIMELINE -->
-      <div class="timeline"></div>
+      <div class="timeline">
+        <h2>Timeline</h2>
+        <p>
+          Here is the breakdown of the time we anticipate using for the upcoming
+          event.
+        </p>
+      </div>
+      <hr />
 
       <!-- PRIZES -->
       <div class="prizes"></div>
